fix z-index on black keys

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ ul {
   transform: translateX(50%);
   height: 9em;
   width: 2em;
-  z-index: 20;
+  z-index: 1;
   border: 1px solid #000;
   border-radius: 0 0 3px 3px;
   box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset,
